go/todo-api/k8s/todo-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: todo-api
  name: todo-api
  namespace: default
spec:
  replicas: 10
  selector:
    matchLabels:
      app: todo-api
  template:
    metadata:
      labels:
        app: todo-api
    spec:
      containers:
      - image: todo-api/latest
        imagePullPolicy: Never
        name: latest
        resources: 
          limits:
            memory: "128Mi"
            cpu: "500m"
