go/todo-api/k8s/todo-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-api-service
  labels:
    run: todo-api-service
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: todo-api-service
